0.3.0
- Added matrix support for distributions
- Added option to run PSA in parallel on a cluster
- Added option to sample parameter sets in PSA
- Added chain name to Markov error messages
- Added re-sizeable formula bar
- Added check for length of discount array vs number of dimensions when
opening properties window
- Added check for static termination condition for Markov Monte Carlo
progress bar
- Added Markov trace subgroup output to write RunReport